care/force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>Reviews Escalations</description>
    <label>Review</label>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>