care/force-app/main/default/objects/Review__c/fields/Date_Review_Posted_Online__c.field-meta.xml
<CustomField>
    <fullName>Date_Review_Posted_Online__c</fullName>
    <description>Date Review Posted Online</description>
    <inlineHelpText>Date Review Posted Online</inlineHelpText>
    <label>Date Review Posted Online</label>
    <type>Date</type>
</CustomField>