care/force-app/main/default/objects/Review__c/fields/Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Notes__c</fullName>
    <description>Decision Notes</description>
    <inlineHelpText>Decision Notes</inlineHelpText>
    <label>Decision Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>