care/force-app/main/default/objects/Review__c/fields/Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Review_Decision__c</fullName>
    <description>Review Decision</description>
    <inlineHelpText>Review Decision</inlineHelpText>
    <label>Review Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>