care/force-app/main/default/objects/Review__c/fields/Review_Details__c.field-meta.xml
<CustomField>
    <fullName>Review_Details__c</fullName>
    <description>Review Details</description>
    <inlineHelpText>Review Details</inlineHelpText>
    <label>Review Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>